; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_219.c_workit.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_219.c_workit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [47 x i8] c"\0Agnomehack local exploit for Debian 2.2 - x86\0A\00", align 1
@.str.1 = private unnamed_addr constant [39 x i8] c"Author: Cody Tubbs (loophole of hhp)\0A\0A\00", align 1
@.str.2 = private unnamed_addr constant [35 x i8] c"Usage: %s <offset> [allign(0..3)]\0A\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"Examp: %s 0\0A\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"Examp: %s 0 1\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @workit(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @stderr, align 4
  %4 = call i32 (i32, i8*, ...) @fprintf(i32 %3, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  %5 = load i32, i32* @stderr, align 4
  %6 = call i32 (i32, i8*, ...) @fprintf(i32 %5, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0))
  %7 = load i32, i32* @stderr, align 4
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 (i32, i8*, ...) @fprintf(i32 %7, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i8* %8)
  %10 = load i32, i32* @stderr, align 4
  %11 = load i8*, i8** %2, align 8
  %12 = call i32 (i32, i8*, ...) @fprintf(i32 %10, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i8* %11)
  %13 = load i32, i32* @stderr, align 4
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 (i32, i8*, ...) @fprintf(i32 %13, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i8* %14)
  %16 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
